Refactor SigmaCompiler architecture by separating parsing, semantic analysis, and interpretation into distinct components. Add unit tests for SigmaParser, SigmaSemanticAnalyzer, and overall architecture. Remove old SigmaCompilerTest and update `.gitignore` for IntelliJ.