@@ -1,86 +1,131 @@
 package org.example;
 
-import org.antlr.v4.runtime.*;
-import org.antlr.v4.runtime.tree.*;
 import org.example.parser.*;
 import org.example.semantic.*;
 import org.example.interpreter.*;
-import org.example.error.*;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Main compiler class for the Sigma programming language.
- * Integrates ANTLR parser, semantic analysis, and interpreter.
+ * Orchestrates the compilation pipeline: parsing → semantic analysis → interpretation.
  */
 public class SigmaCompiler {
 
-    private boolean hasErrors = false;
-    private SigmaErrorListener errorListener;
+    private final SigmaParser parser;
+    private final SigmaSemanticAnalyzer semanticAnalyzer;
 
     public SigmaCompiler() {
-        this.errorListener = new SigmaErrorListener();
+        this.parser = new SigmaParser();
+        this.semanticAnalyzer = new SigmaSemanticAnalyzer();
+    }
+
+    /**
+     * Compile a Sigma program from source code and return the result
+     *
+     * @param sourceCode the Sigma source code to compile
+     * @return CompilationResult containing all compilation phase results
+     */
+    public CompilationResult compile(String sourceCode) {
+        try {
+            // Step 1: Parsing (lexical + syntax analysis)
+            ParseResult parseResult = parser.parse(sourceCode);
+            if (!parseResult.isSuccessful()) {
+                return CompilationResult.parseFailure(parseResult);
+            }
+
+            // Step 2: Semantic analysis
+            SemanticResult semanticResult = semanticAnalyzer.analyze(parseResult.getParseTree());
+            if (!semanticResult.isSuccessful()) {
+                return CompilationResult.semanticFailure(parseResult, semanticResult);
+            }
+
+            // Compilation successful - no execution yet
+            return CompilationResult.success(parseResult, semanticResult);
+
+        } catch (Exception e) {
+            List<String> executionErrors = List.of("Compilation error: " + e.getMessage());
+            return CompilationResult.executionFailure(null, null, executionErrors);
+        }
     }
 
     /**
      * Compile and run a Sigma program from source code
+     *
+     * @param sourceCode the Sigma source code to compile and run
      */
     public void compileAndRun(String sourceCode) {
+        CompilationResult result = compile(sourceCode);
+
+        if (!result.isSuccessful()) {
+            System.err.println("Compilation failed:");
+            System.err.println(result.getAllMessagesAsString());
+            return;
+        }
+
+        // Display warnings if any
+        if (result.hasWarnings()) {
+            System.err.println("Compilation warnings:");
+            result.getAllWarnings().forEach(warning -> System.err.println("Warning: " + warning));
+        }
+
         try {
-            // Step 1: Lexical analysis
-            CharStream input = CharStreams.fromString(sourceCode);
-            BasicGroovyLexer lexer = new BasicGroovyLexer(input);
-            lexer.removeErrorListeners();
-            lexer.addErrorListener(errorListener);
-
-            // Step 2: Syntax analysis
-            CommonTokenStream tokens = new CommonTokenStream(lexer);
-            BasicGroovyParser parser = new BasicGroovyParser(tokens);
-            parser.removeErrorListeners();
-            parser.addErrorListener(errorListener);
-
-            ParseTree tree = parser.compilationUnit();
-
-            if (errorListener.hasErrors()) {
-                System.err.println("Compilation failed with errors:");
-                errorListener.getErrors().forEach(System.err::println);
-                return;
-            }
-
-            // Step 3: Semantic analysis
-            SymbolTable symbolTable = new SymbolTable();
-            SemanticAnalyzer analyzer = new SemanticAnalyzer(symbolTable);
-            analyzer.visit(tree);
-
-            if (analyzer.hasErrors()) {
-                System.err.println("Semantic analysis failed with errors:");
-                analyzer.getErrors().forEach(System.err::println);
-                return;
-            }
-
-            // Step 4: Interpretation/Execution
-            SigmaInterpreter interpreter = new SigmaInterpreter(symbolTable);
-            interpreter.visit(tree);
+            // Step 3: Interpretation/Execution
+            SigmaInterpreter interpreter = new SigmaInterpreter(result.getSemanticResult().getSymbolTable());
+            interpreter.visit(result.getParseResult().getParseTree());
 
         } catch (Exception e) {
-            System.err.println("Compilation error: " + e.getMessage());
+            System.err.println("Execution error: " + e.getMessage());
             e.printStackTrace();
         }
     }
 
     /**
+     * Compile a Sigma program from a file and return the result
+     *
+     * @param filename path to the Sigma source file
+     * @return CompilationResult containing all compilation phase results
+     */
+    public CompilationResult compileFile(String filename) {
+        try {
+            String sourceCode = Files.readString(Paths.get(filename));
+            return compile(sourceCode);
+        } catch (IOException e) {
+            List<String> errors = List.of("File error: " + e.getMessage());
+            return CompilationResult.executionFailure(null, null, errors);
+        }
+    }
+
+    /**
      * Compile and run a Sigma program from a file
+     *
+     * @param filename path to the Sigma source file
      */
     public void compileAndRunFile(String filename) {
         try {
-            String sourceCode = new String(Files.readAllBytes(Paths.get(filename)));
+            String sourceCode = Files.readString(Paths.get(filename));
             compileAndRun(sourceCode);
         } catch (IOException e) {
             System.err.println("Error reading file: " + e.getMessage());
         }
+    }
+
+    /**
+     * Get the parser instance (for testing)
+     */
+    public SigmaParser getParser() {
+        return parser;
+    }
+
+    /**
+     * Get the semantic analyzer instance (for testing)
+     */
+    public SigmaSemanticAnalyzer getSemanticAnalyzer() {
+        return semanticAnalyzer;
     }
 
     public static void main(String[] args) {
